Fixed issue with timer page having a white gap between itself and the header

--- a/project/static/base/css/main.css
+++ b/project/static/base/css/main.css
@@ -113,6 +113,7 @@
 		position: relative;
 		height: 100vh;
 		background: #171717;
+		margin-top: -40px;
 	}
 
 	#countdown-bg {
